[package]
name = "least"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
color-eyre = "0.6"
tracing-error = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "6.0"
lazy_static = "1.5"
log = "0.4"
clap = { version = "4.5", features = ["derive"] }
clircle = "0.6.1"
content_inspector = "0.2.4"
mio = { version = "1.0.4", features = ["os-ext"] }
